2017-08-18  Ryan Haddad  <ryanhaddad@apple.com>

        Skip flaky JSC test microbenchmarks/generator-with-several-types.js.
        https://bugs.webkit.org/show_bug.cgi?id=172543

        Unreviewed test gardening.

        * microbenchmarks/generator-with-several-types.js:

2017-08-17  JF Bastien  <jfbastien@apple.com>

        WebAssembly: const in unreachable code decoded incorrectly, erroneously rejects binary as invalid
        https://bugs.webkit.org/show_bug.cgi?id=175693
        <rdar://problem/33952443>

        Reviewed by Saam Barati.

        Add a regression directory for WebAssembly tests.

        * wasm.yaml:
        * wasm/regress/175693.js: Added.
        (else.else):
        (instance.new.WebAssembly.Instance.new.WebAssembly.Module):
        (catch):
        * wasm/regress/175693.wasm: Added.

2017-08-15  Robin Morisset  <rmorisset@apple.com>

        Support the 'with' keyword in FTL.
        https://bugs.webkit.org/show_bug.cgi?id=175585

        Reviewed by Saam Barati.

        Also improve the JSTest/stress/with.js file to test
        what happens when non-objects are passed to with.

        * stress/with.js:
        (foo):
        (i.catch):
        (i.with): Deleted.

2017-08-14  Keith Miller  <keith_miller@apple.com>

        Add testing tool to lie to the DFG about profiles
        https://bugs.webkit.org/show_bug.cgi?id=175487

        Reviewed by Saam Barati.

        * stress/compare-eq-incomplete-profile.js: Added.
        (const.test.createBuiltin):

2017-08-14  Robin Morisset  <rmorisset@apple.com>

        Support the with keyword in DFG
        https://bugs.webkit.org/show_bug.cgi?id=175470

        Reviewed by Saam Barati.

        Added a new stress-test for the 'with' keyword, that caught a bug in a
        previous version of this code.

        * stress/with.js: Added.
        (i.with):

2017-08-14  Ryan Haddad  <ryanhaddad@apple.com>

        Skip flaky JSC test test/fieldopts/objtypespec-newobj-invalidation.1.js